# NDTM

./: README.md
src/: Parser.hs  TM.hs  Util.hs
tm/haskell/: TuringMachineEmulator.cabal
tm/haskell/src/: Benchmark.hs  Main.hs
