
name:                TuringMachineEmulator
version:             0.1.0.0
license:        BSD3
author:              Tom
maintainer:          to26@st-andrews.ac.uk
build-type:          Simple
cabal-version:       >=1.10

executable TuringMachineEmulator
  main-is:             Main.hs
  HS-Source-Dirs:      src
  other-modules:       Parser, TM 
  build-depends:       base , containers 
  default-language:    Haskell2010

executable Benchmark
  main-is:             Benchmark.hs
  HS-Source-Dirs:      src
  other-modules:       Parser, TM, Util
  build-depends:       base , containers , random, cassava, bytestring, split
  default-language:    Haskell2010

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       tests
                      , src
  -- Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , QuickCheck
                      , hspec-core
                      , containers
                      , split
                      , random
